# siters

./: .gitignore  CMakeLists.txt  Makefile  Makefile.tests  README.md  functional_tests.py  hello.py  main.py  pyproject.toml  siters.py
app/: main.c  siters.c  siters.h
functional_tests/: test_layout_and_styling.py
include/: document_model.h  pdf.h  session_model.h  sessions_model.h
src/: document_model.c  glibc_compat.c  log.c  log.h  main.c  mem_debug.h  pdf_mupdf.c  session_model.c  sessions_model.c  siters.c  siters.h
tests/: README.md  bugs.md  test_siters_gui.py  test_siters_unit.c
